src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Select the nature of your expense</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone &amp; Internet Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing &amp; Copying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Development Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Company__c</fullName>
        <label>Client Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Status__c</fullName>
        <label>Expense Status</label>
        <picklist>
            <picklistValues>
                <fullName>NOT SUBMITTED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SUBMITTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPROVED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REJECTED</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Category__c</fullName>
        <label>Other Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>submits the expense for approval</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>It corresponds to 13% of the amount</description>
        <formula>Amount__c  * 0.13</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_country__c</fullName>
        <label>Travel country</label>
        <picklist>
            <controllingField>Travel_region__c</controllingField>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venezuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_region__c</fullName>
        <label>Travel region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business trips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client meetings</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>Submitted__c</columns>
        <columns>Expense_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>My View</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Travel_region_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(TEXT(Type__c), &quot;Business trips&quot;),  ISBLANK(TEXT(Travel_region__c) ) )</errorConditionFormula>
        <errorDisplayField>Travel_region__c</errorDisplayField>
        <errorMessage>This is a business trip, select a travel region</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>travel_country_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(TEXT(Type__c), &quot;Business trips&quot;),  ISBLANK(TEXT( Travel_country__c ) ) )</errorConditionFormula>
        <errorDisplayField>Travel_country__c</errorDisplayField>
        <errorMessage>This is a business trip, select a travel country</errorMessage>
    </validationRules>
</CustomObject>